--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/ParentView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/ParentView.xaml
@@ -7,7 +7,6 @@
              xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens"
              xmlns:viewmodel="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolCitizens"
              d:DataContext="{d:DesignInstance Type=viewmodel:ParentViewModel, IsDesignTimeCreatable=True}"
-
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -56,9 +55,8 @@
              CommandParameter="{Binding SelectedParent}"
              />
         </StackPanel>
+        <!--A feladat megoldását ide kell írni -->
 
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="2 2 2 2" Padding="0 2" Text="{Binding SelectedParent.LastName}"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="2 2 2 2" Padding="0 2" Text="{Binding SelectedParent.FirstName}"></TextBox>
         <DatePicker Grid.Row="3" Grid.Column="1" Margin="2 2 2 2" SelectedDate="{Binding SelectedParent.BirthsDay}"></DatePicker>
         <StackPanel Grid.Row="5" Grid.Column="1">
             <RadioButton GroupName="schoolclass" Margin="2 4 2 2">a  osztály</RadioButton>
